tests/ui/invalid_pyclass_generic.stderr
error[E0592]: duplicate definitions with name `__pymethod___class_getitem____`
  --> tests/ui/invalid_pyclass_generic.rs:4:1
   |
 4 | #[pyclass(generic)]
   | ^^^^^^^^^^^^^^^^^^^ duplicate definitions for `__pymethod___class_getitem____`
...
12 | #[pymethods]
   | ------------ other definition for `__pymethod___class_getitem____`
   |
   = note: this error originates in the macro `::pyo3::impl_::pymethods::maybe_define_fastcall_function_with_keywords` which comes from the expansion of the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0592]: duplicate definitions with name `__class_getitem__`
  --> tests/ui/invalid_pyclass_generic.rs:4:1
   |
 4 |   #[pyclass(generic)]
   |   ^^^^^^^^^^^^^^^^^^^ duplicate definitions for `__class_getitem__`
...
20 | /     pub fn __class_getitem__(
21 | |
22 | |
23 | |         cls: &Bound<'_, PyType>,
24 | |         key: &Bound<'_, PyAny>,
25 | |     ) -> PyResult<Py<PyAny>> {
   | |____________________________- other definition for `__class_getitem__`
   |
   = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0034]: multiple applicable items in scope
  --> tests/ui/invalid_pyclass_generic.rs:4:1
   |
 4 | #[pyclass(generic)]
   | ^^^^^^^^^^^^^^^^^^^ multiple `__pymethod___class_getitem____` found
   |
note: candidate #1 is defined in an impl for the type `ClassRedefinesClassGetItem`
  --> tests/ui/invalid_pyclass_generic.rs:4:1
   |
 4 | #[pyclass(generic)]
   | ^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `ClassRedefinesClassGetItem`
  --> tests/ui/invalid_pyclass_generic.rs:12:1
   |
12 | #[pymethods]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `pyclass` which comes from the expansion of the attribute macro `pymethods` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0034]: multiple applicable items in scope
  --> tests/ui/invalid_pyclass_generic.rs:4:1
   |
 4 | #[pyclass(generic)]
   | ^^^^^^^^^^^^^^^^^^^ multiple `__class_getitem__` found
   |
note: candidate #1 is defined in an impl for the type `ClassRedefinesClassGetItem`
  --> tests/ui/invalid_pyclass_generic.rs:4:1
   |
 4 | #[pyclass(generic)]
   | ^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `ClassRedefinesClassGetItem`
  --> tests/ui/invalid_pyclass_generic.rs:20:5
   |
20 | /     pub fn __class_getitem__(
21 | |
22 | |
23 | |         cls: &Bound<'_, PyType>,
24 | |         key: &Bound<'_, PyAny>,
25 | |     ) -> PyResult<Py<PyAny>> {
   | |____________________________^
   = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0034]: multiple applicable items in scope
 --> tests/ui/invalid_pyclass_generic.rs:4:1
  |
4 | #[pyclass(generic)]
  | ^^^^^^^^^^^^^^^^^^^ multiple `wrap` found
  |
  = note: candidate #1 is defined in an impl for the type `pyo3::impl_::wrap::IntoPyObjectConverter<Result<T, E>>`
  = note: candidate #2 is defined in an impl for the type `pyo3::impl_::wrap::IntoPyObjectConverter<T>`
  = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui/invalid_pyclass_generic.rs:27:9
   |
25 |     ) -> PyResult<Py<PyAny>> {
   |          ------------------- expected `Result<pyo3::Py<pyo3::PyAny>, PyErr>` because of return type
26 |
27 |         pyo3::types::PyGenericAlias::new(cls.py(), cls.as_any(), key)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Result<Py<PyAny>, PyErr>`, found `Result<Bound<'_, PyGenericAlias>, PyErr>`
   |
   = note: expected enum `Result<pyo3::Py<pyo3::PyAny>, _>`
              found enum `Result<pyo3::Bound<'_, PyGenericAlias>, _>`

error[E0034]: multiple applicable items in scope
  --> tests/ui/invalid_pyclass_generic.rs:20:12
   |
20 |     pub fn __class_getitem__(
   |            ^^^^^^^^^^^^^^^^^ multiple `__pymethod___class_getitem____` found
   |
note: candidate #1 is defined in an impl for the type `ClassRedefinesClassGetItem`
  --> tests/ui/invalid_pyclass_generic.rs:4:1
   |
 4 | #[pyclass(generic)]
   | ^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `ClassRedefinesClassGetItem`
  --> tests/ui/invalid_pyclass_generic.rs:12:1
   |
12 | #[pymethods]
   | ^^^^^^^^^^^^
   = note: this error originates in the macro `::pyo3::impl_::pymethods::maybe_define_fastcall_function_with_keywords` which comes from the expansion of the attribute macro `pymethods` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0034]: multiple applicable items in scope
  --> tests/ui/invalid_pyclass_generic.rs:20:12
   |
20 |     pub fn __class_getitem__(
   |            ^^^^^^^^^^^^^^^^^ multiple `__class_getitem__` found
   |
note: candidate #1 is defined in an impl for the type `ClassRedefinesClassGetItem`
  --> tests/ui/invalid_pyclass_generic.rs:4:1
   |
 4 | #[pyclass(generic)]
   | ^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `ClassRedefinesClassGetItem`
  --> tests/ui/invalid_pyclass_generic.rs:20:5
   |
20 | /     pub fn __class_getitem__(
21 | |
22 | |
23 | |         cls: &Bound<'_, PyType>,
24 | |         key: &Bound<'_, PyAny>,
25 | |     ) -> PyResult<Py<PyAny>> {
   | |____________________________^
   = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0034]: multiple applicable items in scope
  --> tests/ui/invalid_pyclass_generic.rs:25:10
   |
25 |     ) -> PyResult<Py<PyAny>> {
   |          ^^^^^^^^ multiple `wrap` found
   |
   = note: candidate #1 is defined in an impl for the type `pyo3::impl_::wrap::IntoPyObjectConverter<Result<T, E>>`
   = note: candidate #2 is defined in an impl for the type `pyo3::impl_::wrap::IntoPyObjectConverter<T>`

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0034, E0308, E0592.
For more information about an error, try `rustc --explain E0034`.
